2010-10-15  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Andreas Kling.

        [Qt] window.close() doesn't work in qt
        https://bugs.webkit.org/show_bug.cgi?id=46186

        Introduce new attribute in QWebSettings to trigger "setAllowScriptsToCloseWindow"

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        * Api/qwebsettings.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@69856 bbb929c8-8fbe-4397-9dbb-9b2b20218538