third_party/WebKit/WebKit/qt/Api/qwebsettings.h
@@ -77,7 +77,8 @@ public:
         FrameFlatteningEnabled,
         SiteSpecificQuirksEnabled,
         WebGLEnabled,
-        HyperlinkAuditingEnabled
+        HyperlinkAuditingEnabled,
+        JavascriptCanCloseWindows
     };
     enum WebGraphic {
         MissingImageGraphic,
